tests/baselines/reference/ComputedPropertyName13_es6.errors.txt
tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName13_es6.ts(1,11): error TS1022: An index signature parameter must have a type annotation.


==== tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName13_es6.ts (1 errors) ====
    var v: { [e]: number };
              ~
!!! error TS1022: An index signature parameter must have a type annotation.